--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/JavaFXApplication1/nbproject/private/
+/JavaFXApplication1/build/
+/JavaFXApplication1/dist/
