--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ hs_err_pid*
 /JavaFXApplication1/nbproject/private/
 /JavaFXApplication1/build/
 /JavaFXApplication1/dist/
+/JavaFXApplication2/nbproject/private/
+/JavaFXApplication2/build/
+/JavaFXApplication2/dist/
