--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ hs_err_pid*
 /JavaFXApplication2/nbproject/private/
 /JavaFXApplication2/build/
 /JavaFXApplication2/dist/
+/Ims/nbproject/private/
+/Ims/dist/
+/Ims/build/
+/Imsf/nbproject/private/
+/Imsf/dist/
+/Imsf/build/
