--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ hs_err_pid*
 /Imsf/nbproject/private/
 /Imsf/dist/
 /Imsf/build/
+/InventorySystem/nbproject/private/
+/InventorySystem/build/
+/InventorySystem/dist/
+/JavaFXApplicationTest/nbproject/private/
+/JavaFXApplicationTest/build/
+/JavaFXApplicationTest/dist/
