--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,29 @@ hs_err_pid*
 /JavaFXApplicationTest/nbproject/private/
 /JavaFXApplicationTest/build/
 /JavaFXApplicationTest/dist/
+/JavaFXApplication8/nbproject/private/
+/JavaFXApplication8/dist/
+/JavaFXApplication8/build/
+/JavaFXApplication9/nbproject/private/
+/JavaFXApplication9/build/
+/JavaFXApplication9/dist/
+/imsPro/nbproject/private/
+/imsPro/dist/
+/imsPro/build/
+/InventorySystemTwo/nbproject/private/
+/InventorySystemTwo/build/
+/InventorySystemTwo/dist/
+/ChangeListener/nbproject/private/
+/ChangeListener/dist/
+/ChangeListener/build/
+/DigitalClock/nbproject/private/
+/DigitalClock/build/
+/DigitalClock/dist/
+/MouseEvents/nbproject/private/
+/MouseEvents/dist/
+/MouseEvents/build/
+/JavaFXApplication12/nbproject/private/
+/JavaFXApplication12/build/
+/JavaFXApplication12/dist/
+/JavaFXApplication14/nbproject/private/
+/InventorySupplySystem/nbproject/private/
