--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /InventorySupply/nbproject/private/
 /InventorySupply/build/
 /InventorySupply/dist/
+/InventorySupplyMock/nbproject/private/
+/InventorySupplyMock/build/
+/InventorySupplyMock/dist/
+/SupplyInv/nbproject/private/
+/SupplyInv/build/
+/SupplyInv/dist/
