--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /SupplyInv/nbproject/private/
 /SupplyInv/build/
 /SupplyInv/dist/
+/InvSupply/nbproject/private/
+/InvSupply/dist/
+/InvSupply/build/
