--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /InvSupply/nbproject/private/
 /InvSupply/dist/
 /InvSupply/build/
+/JavaRefresh/nbproject/private/
+/JavaRefresh/build/
+/JavaRefresh/dist/
