--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /JasI/nbproject/private/
 /JasI/build/
 /JasI/dist/
+/JavaApplicationII/nbproject/private/
+/JavaApplicationII/build/
+/JavaApplicationII/dist/
