--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@
 /JavaApplicationII/nbproject/private/
 /JavaApplicationII/build/
 /JavaApplicationII/dist/
+/JavaApplicationIII/nbproject/private/
+/JavaApplicationIII/build/
+/JavaApplicationIII/dist/
