--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 /JavaApplicationIII/nbproject/private/
 /JavaApplicationIII/build/
 /JavaApplicationIII/dist/
+/JavaApplicationIV/nbproject/private/
+/JavaApplicationIV/build/
+/JavaApplicationIV/dist/
+/WashingtonTrail/nbproject/private/
