--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /JavaApplicationIV/build/
 /JavaApplicationIV/dist/
 /WashingtonTrail/nbproject/private/
+/WashingtonTrail/build/
+/WashingtonTrail/dist/
