--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /WashingtonTrail/nbproject/private/
 /WashingtonTrail/build/
 /WashingtonTrail/dist/
+/JavaApplication7/nbproject/private/
+/JavaApplication7/build/
+/JavaApplication7/dist/
